🚧 The consumer sends the VC to the provider